--- a/index.html
+++ b/index.html
@@ -181,19 +181,22 @@
               <a href="#none"><i class="fa-solid fa-square-caret-left" style="color: #e3e3e3;"></i></a>
               <a href="#none"><i class="fa-solid fa-square-caret-right" style="color: #e3e3e3;"></i></a>
             </div>
-            <h1 class="secondary_visual_title">다음 경기 일정</h1>
-            <h2>2025.05.24(토) 19:30</h2>
-            <div class="secondary_visual_wrap_teams">
-              <img src="images/logo1.png" alt="">
-              <div class="secondary_visual_wrap_teams_vs">
-                <span>VS</span>
-                <p>HOME</p>
-              </div>
-              <img src="images/SUWONFC.png" alt="">
+            <div>
+              <h3 class="secondary_visual_title">다음 경기 일정</h3>
+              <h2>2025.05.24(토) 19:30</h2>
             </div>
-            <div class="secondary_visual_wrap_api">
-              <i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>
-              <h3>서울월드컵경기장</h3>
+            <div>
+              <div class="secondary_visual_wrap_teams">
+                <img src="images/logo1.png" alt="">
+                <div class="secondary_visual_wrap_teams_vs">
+                  <span>VS</span>
+                  <p>HOME</p>
+                </div>
+                <img src="images/SUWONFC.png" alt="">
+              </div>
+              <div class="secondary_visual_wrap_api">
+                <p><i class="fa-solid fa-location-dot"></i>서울월드컵경기장</p>
+              </div>
             </div>
             <div class="countdown secondary_countdown">
               <div class="countdown_box countdown_date"><span>일</span>
@@ -214,26 +217,28 @@
             </div>
             <button class="ticket_link"><i class="bi bi-ticket-detailed"></i>예매하기</button>
           </div>
-        </div>
-        <!-- 지도 모달 -->
-        <div id="mapModal">
-          <div class="modal-content">
-            <button onclick="closeMapModal()">X</button>
-            <div id="map"></div>
+          <!-- 지도 모달 -->
+          <div id="mapModal">
+            <div class="modal-content">
+              <button onclick="closeMapModal()">X</button>
+              <div id="map"></div>
+            </div>
           </div>
         </div>
         <div class="secondary_visual_item secondary_visual_item03">
           <div class="secondary_visual_wrap">
-            <div class="secondary_visual_content">
-              <h3 class="secondary_visual_title">최다득점</h3>
-              <div class="member09">
-                <img src="images/member09.png" alt="member09">
-              </div>
+            <div class="member_person">
               <div class="member_info">
                 <div class="member_num">06</div>
                 <div class="member_name">기성용</div>
                 <p>PLAYER<br>OF THE<br>MATCH</p>
               </div>
+              <div class="member09">
+                <img src="images/member09.png" alt="member09">
+              </div>
+            </div>
+            <div class="secondary_visual_content">
+              <h3 class="secondary_visual_title">최다득점</h3>
               <div class="btn_wrap">
                 <button class="record">경기기록</button>
                 <button class="highlights">하이라이트</button>
@@ -299,14 +304,16 @@
                   <div class="name">16강 코리아컵</div>
                   <div class="date"><strong>05. 14</strong>(수)</div>
                   <div class="place"><i class="fa-solid fa-location-dot"></i>대전월드컵보조경기장 | 19:00</div>
-                  <div class="team">
-                    <div class="team_name">FC서울</div>
-                    <div class="team_score">2</div>
-                  </div>
-                  <div class="vs">VS</div>
-                  <div class="team">
-                    <div class="team_name">대전코레일FC</div>
-                    <div class="team_score">1</div>
+                  <div class="match_team_wrap">
+                    <div class="team">
+                      <div class="team_name">FC서울</div>
+                      <div class="team_score">2</div>
+                    </div>
+                    <div class="vs">VS</div>
+                    <div class="team">
+                      <div class="team_name">대전코레일FC</div>
+                      <div class="team_score">1</div>
+                    </div>
                   </div>
                   <button onclick="#" class="match_btn">경기종료</button>
                 </div>
@@ -319,14 +326,16 @@
                   <div class="name">14 K리그1</div>
                   <div class="date"><strong>05. 18</strong>(일)</div>
                   <div class="place"><i class="fa-solid fa-location-dot"></i>대구iM뱅크PARK | 16:30</div>
-                  <div class="team">
-                    <div class="team_name">FC서울</div>
-                    <div class="team_score">1</div>
-                  </div>
-                  <div class="vs">VS</div>
-                  <div class="team">
-                    <div class="team_name">대구FC</div>
-                    <div class="team_score">0</div>
+                  <div class="match_team_wrap">
+                    <div class="team">
+                      <div class="team_name">FC서울</div>
+                      <div class="team_score">1</div>
+                    </div>
+                    <div class="vs">VS</div>
+                    <div class="team">
+                      <div class="team_name">대구FC</div>
+                      <div class="team_score">0</div>
+                    </div>
                   </div>
                   <button onclick="#" class="match_btn">경기종료</button>
                 </div>
@@ -337,17 +346,18 @@
                     <img src="images/logo3.png" alt="match_box_img">
                   </div>
                   <div class="name">15 K리그1</div>
-                  <div class="home_btn">HOME</div>
                   <div class="date"><strong>05. 24</strong>(토)</div>
                   <div class="place"><i class="fa-solid fa-location-dot"></i>서울월드컵경기장 | 16:30</div>
-                  <div class="team">
-                    <div class="team_name">FC서울</div>
-                    <div class="team_score">1</div>
-                  </div>
-                  <div class="vs">VS</div>
-                  <div class="team">
-                    <div class="team_name">수원FC</div>
-                    <div class="team_score">1</div>
+                  <div class="match_team_wrap">
+                    <div class="team">
+                      <div class="team_name">FC서울</div>
+                      <div class="team_score">1</div>
+                    </div>
+                    <div class="vs">VS</div>
+                    <div class="team">
+                      <div class="team_name">수원FC</div>
+                      <div class="team_score">1</div>
+                    </div>
                   </div>
                   <button onclick="#" class="match_btn">경기종료</button>
                 </div>
@@ -360,14 +370,16 @@
                   <div class="name">16 K리그1</div>
                   <div class="date"><strong>05. 28</strong>(수)</div>
                   <div class="place"><i class="fa-solid fa-location-dot"></i>김천종합스포츠타운 | 19:30</div>
-                  <div class="team">
-                    <div class="team_name">FC서울</div>
-                    <div class="team_score">-</div>
-                  </div>
-                  <div class="vs">VS</div>
-                  <div class="team">
-                    <div class="team_name">김천FC</div>
-                    <div class="team_score">-</div>
+                  <div class="match_team_wrap">
+                    <div class="team">
+                      <div class="team_name">FC서울</div>
+                      <div class="team_score">-</div>
+                    </div>
+                    <div class="vs">VS</div>
+                    <div class="team">
+                      <div class="team_name">김천FC</div>
+                      <div class="team_score">-</div>
+                    </div>
                   </div>
                   <button onclick="#" class="match_btn btn_on">예매중</button>
                 </div>
@@ -378,17 +390,18 @@
                     <img src="images/logo3.png" alt="match_box_img">
                   </div>
                   <div class="name">17 K리그1</div>
-                  <div class="home_btn">HOME</div>
                   <div class="date"><strong>05. 31</strong>(토)</div>
                   <div class="place"><i class="fa-solid fa-location-dot"></i>서울월드컵경기장 | 19:00</div>
-                  <div class="team">
-                    <div class="team_name">FC서울</div>
-                    <div class="team_score">-</div>
-                  </div>
-                  <div class="vs">VS</div>
-                  <div class="team">
-                    <div class="team_name">제주FC</div>
-                    <div class="team_score">-</div>
+                  <div class="match_team_wrap">
+                    <div class="team">
+                      <div class="team_name">FC서울</div>
+                      <div class="team_score">-</div>
+                    </div>
+                    <div class="vs">VS</div>
+                    <div class="team">
+                      <div class="team_name">제주FC</div>
+                      <div class="team_score">-</div>
+                    </div>
                   </div>
                   <button onclick="#" class="match_btn">예매 오픈 예정</button>
                 </div>
@@ -1752,7 +1765,7 @@
           </div>
           <div class="swiper-slide">
             <div class="story">
-              <img src="images/story07.PNG" alt="">
+              <img src="images/story07.png" alt="">
               <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
             </div>
           </div>
