--- a/index.html
+++ b/index.html
@@ -100,25 +100,25 @@
             <div class="slide_info">
               <p>01</p>
               <div class="progress-line"></div>
-              <div class="slide_info_title"><a href="#none">5월 24일(토) 수원전 예매 안내</a></div>
+              <div class="slide_info_title"><a href="schedule.html">5월 24일(토) 수원전 예매 안내</a></div>
             </div>
             <div class="slide_info">
               <p>02</p>
               <div class="progress-line"></div>
-              <div class="slide_info_title"><a href="#none">“더 큰 도약을 위해, 루마니아 리그 득점왕이 온다!” FC서울, 크로아티아 공격수 둑스 영입!</a>
+              <div class="slide_info_title"><a href="notice.html">“더 큰 도약을 위해, 루마니아 리그 득점왕이 온다!” FC서울, 크로아티아 공격수 둑스 영입!</a>
               </div>
             </div>
             <div class="slide_info">
               <p>03</p>
               <div class="progress-line"></div>
-              <div class="slide_info_title"><a href="#none">“수호신 사랑합니다!” 김기동 감독의 각별한 팬 사랑! 감독이 직접 준비한 직관 이벤트 '아빠가
+              <div class="slide_info_title"><a href="notice.html">“수호신 사랑합니다!” 김기동 감독의 각별한 팬 사랑! 감독이 직접 준비한 직관 이벤트 '아빠가
                   쏜다'</a>
               </div>
             </div>
             <div class="slide_info">
               <p>04</p>
               <div class="progress-line"></div>
-              <div class="slide_info_title"><a href="#none">FC서울 문선민, ‘HS효성더클래스 4월의 선수상’ 수상!</a></div>
+              <div class="slide_info_title"><a href="notice.html">FC서울 문선민, ‘HS효성더클래스 4월의 선수상’ 수상!</a></div>
             </div>
           </div>
         </div>
@@ -311,7 +311,7 @@
           <div class="front_header">
             <h2>FC SEOUL NEXT MATCH</h2>
             <p>FC서울의 최근 경기 일정을 만나보아요</p>
-            <a href="#none" class="btn_view">
+            <a href="schedule.html" class="btn_view">
               자세히보기
               <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -1635,7 +1635,7 @@
                 <div class="front_header">
                   <h2>FC SEOUL NEWS</h2>
                   <p>FC서울의 자세한 소식을 만나보아요</p>
-                  <a href="#none" class="btn_view">
+                  <a href="notice.html" class="btn_view">
                     자세히보기
                     <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -1712,7 +1712,7 @@
                 <div class="notice_inner">
                   <img src="images/logo1.png" alt="logo1">
                   <h3>NOTICE</h3>
-                  <a href="#none" class="btn_view">
+                  <a href="notice.html" class="btn_view">
                     자세히보기
                     <svg width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -1731,39 +1731,39 @@
                 </div>
                 <ul>
                   <li>
-                    <a href="#none">FC서울, '로버트 몬다비(Robert Mondavi)'와 공식 파트너</a>
+                    <a href="notice.html">FC서울, '로버트 몬다비(Robert Mondavi)'와 공식 파트너</a>
                     <p class="notice_inner_span"><span>20205-05-18</span>전체관리자</p>
                   </li>
                   <li>
-                    <a href="#none">FC서울 x GS25, 'FC서울 테마 편의점' 오픈 GS그룹 20주년 기념 팬 체험형 매장 선보여!</a>
+                    <a href="notice.html">FC서울 x GS25, 'FC서울 테마 편의점' 오픈 GS그룹 20주년 기념 팬 체험형 매장 선보여!</a>
                     <p class="notice_inner_span"><span>20205-05-18</span>전체관리자</p>
                   </li>
                   <li>
-                    <a href="#none">FC서울, 롯데칠성 '크러시'와 2년 연속 공식 스폰서십 체결</a>
+                    <a href="notice.html">FC서울, 롯데칠성 '크러시'와 2년 연속 공식 스폰서십 체결</a>
                     <p class="notice_inner_span"><span>20205-05-18</span>전체관리자</p>
                   </li>
                   <li>
-                    <a href="#none">FC서울, '짱구는 못말려'와 컬래버레이션 활동 전개!</a>
+                    <a href="notice.html">FC서울, '짱구는 못말려'와 컬래버레이션 활동 전개!</a>
                     <p class="notice_inner_span"><span>20205-05-18</span>전체관리자</p>
                   </li>
                   <li>
-                    <a href="#none">"수호신 사랑합니다!" FC서울 김기동 감독의 각별한 팬 사랑! FC서울 김기동 감독이 직접 </a>
+                    <a href="notice.html">"수호신 사랑합니다!" FC서울 김기동 감독의 각별한 팬 사랑! FC서울 김기동 감독이 직접 </a>
                     <p class="notice_inner_span"><span>20205-05-18</span>전체관리자</p>
                   </li>
                   <li>
-                    <a href="#none">FC서울, 한돈자조금관리위원회와 2025시즌 공식 스폰서십 체결</a>
+                    <a href="notice.html">FC서울, 한돈자조금관리위원회와 2025시즌 공식 스폰서십 체결</a>
                     <p class="notice_inner_span"><span>20205-05-18</span>전체관리자</p>
                   </li>
                   <li>
-                    <a href="#none">FC서울, Theta Network와 파트너십 체결 … 공식 AI 팬 에이전트 '서울메이트(SeoulMate)' 출시</a>
+                    <a href="notice.html">FC서울, Theta Network와 파트너십 체결 … 공식 AI 팬 에이전트 '서울메이트(SeoulMate)' 출시</a>
                     <p class="notice_inner_span"><span>20205-05-18</span>전체관리자</p>
                   </li>
                   <li>
-                    <a href="#none">FC서울, 일동후디스 하이뮨과 2025 시즌 공식 스폰서십 체결</a>
+                    <a href="notice.html">FC서울, 일동후디스 하이뮨과 2025 시즌 공식 스폰서십 체결</a>
                     <p class="notice_inner_span"><span>20205-05-18</span>전체관리자</p>
                   </li>
                   <li>
-                    <a href="#none">FC Seoul Partners with Theta Network to Launch Official AI Fan Agent 'SeoulMate'</a>
+                    <a href="notice.html">FC Seoul Partners with Theta Network to Launch Official AI Fan Agent 'SeoulMate'</a>
                     <p class="notice_inner_span"><span>20205-05-18</span>전체관리자</p>
                   </li>
                 </ul>
