--- a/profile.html
+++ b/profile.html
@@ -35,7 +35,7 @@
               <p>신장/체중</p>
               <p>173CM/67KG</p>
               <p>입단연도</p>
-              <p>입단연도</p>
+              <p>2025년</p>
             </div>
             <div class="profile_visual_desc02">
               <p>출생지</p>
@@ -127,10 +127,10 @@
                 <b>득점</b>
                 <b>도움</b>
                 <b>슈팅</b>
-                <i>11</i>
-                <i>1</i>
+                <i>20</i>
                 <i>2</i>
-                <i>25</i>
+                <i>5</i>
+                <i>21</i>
               </div>
             </div>
             <div class="profile_carrer_table">
@@ -139,8 +139,8 @@
                 <b>경고</b>
                 <b>퇴장</b>
                 <b>실점</b>
-                <i>9</i>
-                <i>2</i>
+                <i>13</i>
+                <i>3</i>
                 <i>0</i>
                 <i>0</i>
               </div>
@@ -150,8 +150,8 @@
         <div class="profile_carrer_year">2023</div>
         <div class="profile_carrer_info">
           <div class="profile_carrer_desc">
-            <p><em>06</em>경력사항 적는 란</p>
-            <p><em>01</em>간격은 15px(1rem)</p>
+            <p><em>06</em>K리그1 3월의 선수상</p>
+            <p><em>01</em>AFC 아시안컵 국가대표 (8강)</p>
           </div>
           <div class="profile_carrer_tables">
             <div class="profile_carrer_table">
@@ -160,10 +160,10 @@
                 <b>득점</b>
                 <b>도움</b>
                 <b>슈팅</b>
-                <i>11</i>
-                <i>1</i>
+                <i>35</i>
                 <i>2</i>
-                <i>25</i>
+                <i>4</i>
+                <i>46</i>
               </div>
             </div>
             <div class="profile_carrer_table">
@@ -172,8 +172,8 @@
                 <b>경고</b>
                 <b>퇴장</b>
                 <b>실점</b>
-                <i>9</i>
-                <i>2</i>
+                <i>33</i>
+                <i>5</i>
                 <i>0</i>
                 <i>0</i>
               </div>
@@ -192,10 +192,10 @@
                 <b>득점</b>
                 <b>도움</b>
                 <b>슈팅</b>
-                <i>11</i>
+                <i>35</i>
+                <i>0</i>
                 <i>1</i>
-                <i>2</i>
-                <i>25</i>
+                <i>35</i>
               </div>
             </div>
             <div class="profile_carrer_table">
@@ -204,8 +204,8 @@
                 <b>경고</b>
                 <b>퇴장</b>
                 <b>실점</b>
-                <i>9</i>
-                <i>2</i>
+                <i>24</i>
+                <i>7</i>
                 <i>0</i>
                 <i>0</i>
               </div>
@@ -215,8 +215,8 @@
         <div class="profile_carrer_year">2021</div>
         <div class="profile_carrer_info">
           <div class="profile_carrer_desc">
-            <p><em>05</em>경력사항 적는 란</p>
-            <p><em>02</em>하단 마진 60px(4rem)</p>
+            <p><em>05</em>대한축구협회 올해의 선수상</p>
+            <p><em>02</em>EFL 리그컵 준우승</p>
           </div>
           <div class="profile_carrer_tables">
             <div class="profile_carrer_table">
@@ -225,10 +225,10 @@
                 <b>득점</b>
                 <b>도움</b>
                 <b>슈팅</b>
-                <i>11</i>
+                <i>34</i>
+                <i>3</i>
                 <i>1</i>
-                <i>2</i>
-                <i>25</i>
+                <i>31</i>
               </div>
             </div>
             <div class="profile_carrer_table">
@@ -237,8 +237,8 @@
                 <b>경고</b>
                 <b>퇴장</b>
                 <b>실점</b>
-                <i>9</i>
-                <i>2</i>
+                <i>36</i>
+                <i>6</i>
                 <i>0</i>
                 <i>0</i>
               </div>
