--- a/header.html
+++ b/header.html
@@ -74,20 +74,20 @@
       <div class="mega_nav" id="trigger">
         <div class="mega_nav_inner">
           <div class="mega_nav_sub_menu">
-            <a href="members.html">선수단 소개</a>
-            <a href="history.html">구단 소개</a>
+            <a href="members.html" style="color:#FD082A !important">선수단 소개</a>
+            <a href="history.html" style="color:#FD082A !important">구단 소개</a>
             <a href="history.html">그룹 소개</a>
             <a href="history.html">후원사</a>
             <a href="history.html">전자 공고</a>
           </div>
           <div class="mega_nav_sub_menu">
             <a href="notice.html">NEWS</a>
-            <a href="notice.html">NOTICE</a>
+            <a href="notice.html" style="color:#FD082A !important">NOTICE</a>
             <a href="notice.html">PHOTO</a>
             <a href="notice.html">공식 SNS</a>
           </div>
           <div class="mega_nav_sub_menu">
-            <a href="schedule.html">일정 / 결과</a>
+            <a href="schedule.html" style="color:#FD082A !important">일정 / 결과</a>
             <a href="schedule.html">기록 / 순위</a>
           </div>
           <div class="mega_nav_sub_menu">
@@ -108,20 +108,20 @@
         </div>
       </div>
       <div class="sub_menu" id="club">
-        <a href="members.html">선수단 소개</a>
-        <a href="history.html">구단 소개</a>
+        <a href="members.html" style="color:#FD082A !important">선수단 소개</a>
+        <a href="history.html" style="color:#FD082A !important">구단 소개</a>
         <a href="history.html">그룹 소개</a>
         <a href="history.html">후원사</a>
         <a href="history.html">전자 공고</a>
       </div>
       <div class="sub_menu" id="media">
         <a href="notice.html">NEWS</a>
-        <a href="notice.html">NOTICE</a>
+        <a href="notice.html" style="color:#FD082A !important">NOTICE</a>
         <a href="notice.html">PHOTO</a>
         <a href="notice.html">공식 SNS</a>
       </div>
       <div class="sub_menu" id="matches">
-        <a href="schedule.html">일정 / 결과</a>
+        <a href="schedule.html" style="color:#FD082A !important">일정 / 결과</a>
         <a href="schedule.html">기록 / 순위</a>
       </div>
       <div class="sub_menu" id="tickets">
@@ -161,8 +161,8 @@
           <div class="mega_nav_item_mobile">
             <div class="mega_nav_title"><i class="fa-solid fa-minus"></i><b>CLUB</b></div>
             <div class="mega_nav_item_wrap">
-              <a href="members.html">선수단 소개</a>
-              <a href="history.html">구단 소개</a>
+              <a href="members.html" style="color:#FD082A !important">선수단 소개</a>
+              <a href="history.html" style="color:#FD082A !important">구단 소개</a>
               <a href="history.html">그룹 소개</a>
               <a href="history.html">후원사</a>
               <a href="history.html">전자 공고</a>
@@ -172,7 +172,7 @@
             <div class="mega_nav_title"><i class="fa-solid fa-minus"></i><b>MEDIA</b></div>
             <div class="mega_nav_item_wrap">
               <a href="notice.html">NEWS</a>
-              <a href="notice.html">NOTICE</a>
+              <a href="notice.html" style="color:#FD082A !important">NOTICE</a>
               <a href="notice.html">PHOTO</a>
               <a href="notice.html">공식 SNS</a>
             </div>
@@ -180,7 +180,7 @@
           <div class="mega_nav_item_mobile">
             <div class="mega_nav_title"><i class="fa-solid fa-minus"></i><b>MATCHES</b></div>
             <div class="mega_nav_item_wrap">
-              <a href="schedule.html">일정 / 결과</a>
+              <a href="schedule.html" style="color:#FD082A !important">일정 / 결과</a>
               <a href="schedule.html">기록 / 순위</a>
             </div>
           </div>
