--- a/footer.html
+++ b/footer.html
@@ -5,8 +5,8 @@
           <li>
             <b class="sitemap_title">CLUB</b>
             <ul class="sitemap_subtitles">
-              <li><a href="members.html">선수단 소개</a></li>
-              <li><a href="history.html">구단 소개</a></li>
+              <li><a href="members.html" style="color:#FD082A !important">선수단 소개</a></li>
+              <li><a href="history.html" style="color:#FD082A !important">구단 소개</a></li>
               <li><a href="history.html">그룹 소개</a></li>
               <li><a href="history.html">후원사</a></li>
               <li><a href="history.html">전자 공고</a></li>
@@ -17,7 +17,7 @@
             </b>
             <ul class="sitemap_subtitles">
               <li><a href="notice.html">NEWS</a></li>
-              <li><a href="notice.html">NOTICE</a></li>
+              <li><a href="notice.html" style="color:#FD082A !important">NOTICE</a></li>
               <li><a href="notice.html">PHOTO</a></li>
               <li><a href="notice.html">공식 SNS</a></li>
             </ul>
@@ -25,7 +25,7 @@
           <li>
             <b class="sitemap_title">MATCHES</b>
             <ul class="sitemap_subtitles">
-              <li><a href="schedule.html">일정 / 결과</a></li>
+              <li><a href="schedule.html" style="color:#FD082A !important">일정 / 결과</a></li>
               <li><a href="schedule.html">기록 / 순위</a></li>
             </ul>
           </li>
